Fix directives drop down list cut short
Issue-ID: SDC-4063

--- a/catalog-ui/src/app/ng2/components/logic/select-directives/select-directives.component.less
+++ b/catalog-ui/src/app/ng2/components/logic/select-directives/select-directives.component.less
@@ -2,10 +2,10 @@
 @import './../../../../../assets/styles/variables.less';
 
 .select-directives {
+  height: 350px;
   .multi-select-dropdown-box {
     padding: 15px 12px;
     position: relative;
-    height: 200px;
     color: @main_color_a;
   }
 
